--- a/myapp/src/app.css
+++ b/myapp/src/app.css
@@ -1,9 +1,9 @@
-@import '@fontsource/atkinson-hyperlegible';
-@import '@fontsource/jetbrains-mono';
+@import '@fontsource-variable/manrope';
+@import '@fontsource-variable/jetbrains-mono';
 
 html {
 	/* font */
-	--font-system-ui: 'Atkinson Hyperlegible', sans-serif;
+	--font-system-ui: 'Manropeible', sans-serif;
 	--font-monospace-code: 'JetBrains Mono', monospace;
 
 	/* dark */
